@@ -609,12 +609,18 @@ class CController extends CBaseController
 		else
 			$extension='.php';
 		if($viewName[0]==='/')
-			$viewFile=$basePath.$viewName.$extension;
+			$viewFile=$basePath.$viewName;
 		else if(strpos($viewName,'.'))
-			$viewFile=Yii::getPathOfAlias($viewName).$extension;
+			$viewFile=Yii::getPathOfAlias($viewName);
 		else
-			$viewFile=$viewPath.DIRECTORY_SEPARATOR.$viewName.$extension;
-		return is_file($viewFile) ? Yii::app()->findLocalizedFile($viewFile) : false;
+			$viewFile=$viewPath.DIRECTORY_SEPARATOR.$viewName;
+
+		if(is_file($viewFile.$extension))
+			return Yii::app()->findLocalizedFile($viewFile.$extension);
+		else if($extension!=='.php' && is_file($viewFile.'.php'))
+			return Yii::app()->findLocalizedFile($viewFile.'.php');
+		else
+			return false;
 	}
 
 	/**
